# cli-api-consumer

./: Cargo.toml
src/: controller.rs  main.rs  models.rs
