[package]
name = "consumer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21.7"
text_io = "0.1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
